# intelligent-teacher-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.github/workflows/: blank.yml
src/: config.py  prompt_template.py
src/teacher_assistant/: memory_utils.py  retriever.py  vectorial_db.py
