[tool.poetry]
name = "teacher_assistant"
version = "0.1.0"
description = "This package is designed to assist teachers in managing students questions and providing relevant resources."
authors = ["MBIA NDI Marie Thérèse <mbialaura12@gmail.com>"]
readme = "README.md"
packages = [{include = "teacher_assistant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
langchain = "^0.3.7"
transformers = "^4.46.2"
langchain-community = "^0.3.7"
langchain-huggingface = "^0.1.2"
protobuf = "^5.28.3"
sentencepiece = "^0.2.0"
google-search-results = "^2.4.2"
pandas = "^2.2.3"
nbconvert = "^7.16.4"
lancedb = "^0.17.0"
ragatouille = "^0.0.8.post4"
plotly = "^5.24.1"
gradio = "^6.2.0"
streamlit = "^1.53.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
